# text-provenance

./: .gitignore  LICENSE  README.md
fixtures/: test-cases.json
python/: pyproject.toml
python/src/text_provenance/: __init__.py  metrics.py  optimizer.py  scorer.py  tokenizer.py
python/tests/: test_scorer.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts  metrics.ts  scorer.ts  tokenizer.ts  types.ts
typescript/tests/: scorer.test.ts
